@@ -9,7 +9,9 @@ Version 1.3.6
   - Ukrainian translation;
   - Spanish translation;
   - Czech translation;
-  - Bind Plus and Minus keys for Program tab for +\- zoom respectively [BUT-112];
+  - Bind Plus and Minus keys for Program tab for +\- zoom respectively [BUG-112];
+  - Bind Plus and Minus keys for Config tab for +\- zoom respectively [BUG-112];
+  - Allow to change Config and Program Icon sizes independently  [BUG-112];
  Documented:
   - q4wine prevents user from running winecfg from KRunner even after uninstalling [BUG-98];
  Fixed:
